# mycode

Newton/: 牛顿迭代法.txt
Newton/rp_data/: Data_trans_rp.m  data_rp.mat  rp_data_to_C.txt
readtxt/: CMakeLists.txt
readtxt/src/: dataIn.txt  main.cpp
rt_control/: readme
zjl_robot_one/: readme
